Отправил изменения на сервер

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <script src="https://files.salebot.pro/uploads/file_item/file/192012/logicer.js"></script>
     <script src="https://files.salebot.pro/uploads/file_item/file/192012/logicerser.js"></script>
 
+
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@shoelace-style/shoelace@2.20.0/cdn/themes/dark.css" />
     <script type="module" src="https://cdn.jsdelivr.net/npm/@shoelace-style/shoelace@2.20.0/cdn/shoelace-autoloader.js"></script>
     
@@ -68,7 +69,7 @@
     </header>
 
 
-    <section id="wheel" style="display: block;">
+    <section id="wheel" style="display: none;">
         <div class="wheel_title" style="text-align: center; margin-bottom: 40px;">
             <h1>Колесо <span class="accent-word">фортуны</span></h1>
             <p>Подарите себе момент радости 🤗</p>
@@ -100,7 +101,7 @@
             
         </div>
     </section>
-<P>Переход</P>
+
     <script>
         let wheelOptions = {
             'numSegments'  : 10,
