--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
     </header>
 
 
-    <section id="wheel" style="display: none;">
+    <section id="wheel" style="display: block;">
         <div class="wheel_title" style="text-align: center; margin-bottom: 40px;">
             <h1>Колесо <span class="accent-word">фортуны</span></h1>
             <p>Подарите себе момент радости 🤗</p>
@@ -84,7 +84,7 @@
         <sl-button class="wheel-spin" variant="primary" size="medium" style="width: 100%; margin-bottom: 1rem;" onClick="startSpin();">Испытать удачу</sl-button>
     </section>
 
-    <section id="wheel-no-access" style="display: block;">
+    <section id="wheel-no-access" style="display: none;">
         <div class="the_wheel_no-accec">
             <div class="the_wheel_title">
                 <h1><span class="accent-word">Колесо недоступно</span></h1><br>
