--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
     </header>
 
 
-    <section id="wheel" style="display: block;">
+    <section id="wheel" style="display: none;">
         <div class="wheel_title" style="text-align: center; margin-bottom: 40px;">
             <h1>Колесо <span class="accent-word">фортуны</span></h1>
             <p>Подарите себе момент радости 🤗</p>
@@ -94,11 +94,23 @@
                     <p style="color: white" align="center">Ваш браузер не поддерживает canvas.</p>
                 </canvas>
         </div>
-        <p style="text-align: center; font-weight: 500;margin: 20px 0 30px 0;">Доступно прокрутов: <span class="accent-word">12</span></p>
+        <p style="text-align: center; font-weight: 500;margin: 20px 0 30px 0;">Доступно прокрутов: <sl-badge variant="primary" pill>1</sl-badge></p>
         <sl-button class="wheel-btn" variant="primary" size="medium" style="width: 100%; margin-bottom: 1rem;" onClick="startSpin();">Испытать удачу</sl-button>
     </section>
 
-    <section id="wheel-no-spins" style="display: none;">
+    <section id="wheel-no-spins" style="display: block; text-align: center;">
+        <div class="wheel_title" style="text-align: center; margin-bottom: 40px;">
+            <h1>Нет доступных <span class="accent-word">прокрутов</span></h1>
+            <p>Но ты можешь их получить за приглашенных друзей</p>  
+        </div>
+        <div class= "ref-btn-block" style="display: flex; align-items: center; gap: 10px;justify-content: center;">
+            <sl-button onclick="shareRefToTelegram()">Пригласить друга</sl-button>
+            <sl-copy-button value="Shoelace rocks!"></sl-copy-button>
+        </div>
+        <sl-menu disabled style="text-align: left; margin: 20px auto;">
+            <sl-menu-label>Статистика</sl-menu-label>
+            <sl-menu-item>Пригласил друзей<sl-badge slot="suffix" variant="neutral" pill>4</sl-badge></sl-menu-item>
+        </sl-menu>
     </section>
 
     <section id="wheel-ref" style="display: none;">
@@ -183,6 +195,15 @@
             console.log(sanitizedText);
             document.querySelector('.prize-label').textContent = sanitizedText;
             document.querySelector('.prize-dialog').show()
+        }
+   
+        function shareRefToTelegram() {
+            const message = encodeURIComponent("Привет! Попробуй наше колесо фортуны: https://your-site.com");
+            if (window.Telegram && Telegram.WebApp) {
+                Telegram.WebApp.openTelegramLink(`https://t.me/share/url?url=${message}`);
+            } else {
+                window.open(`https://t.me/share/url?url=${message}`, "_blank");
+            }
         }
     </script>
 
