--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
             var tg_name = window.Telegram.WebApp.initDataUnsafe.user.first_name || 'Гость';
             var tg_id = window.Telegram.WebApp.initDataUnsafe.user.id;
             var tg_username = window.Telegram.WebApp.initDataUnsafe.user.username;
-            var photo_url = window.Telegram.WebApp.initDataUnsafe.photo_url;
+            var photo_url = window.Telegram.WebApp.initDataUnsafe.user.photo_url;
         } else {
             var tg_name = 'Гость';
             var tg_id = 641638479;
